--- a/Pages/CreateCidadeDestino.cshtml
+++ b/Pages/CreateCidadeDestino.cshtml
@@ -17,6 +17,11 @@
         <input asp-for="CidadeDestino.Nome" class="form-control" />
         <span asp-validation-for="CidadeDestino.Nome" class="text-danger"></span>
     </div>
+    <div class="mb-3">
+        <label asp-for="CidadeDestino.Pais" class="form-label"></label>
+        <input asp-for="CidadeDestino.Pais" class="form-control" />
+        <span asp-validation-for="CidadeDestino.Pais" class="text-danger"></span>
+    </div>
     <button type="submit" class="btn btn-primary">Cadastrar</button>
 </form>
 
