--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/CreateCidadeDestino">Create Cidade Destino</a>
                         </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="clienteDetailsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Cliente Details
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="clienteDetailsDropdown">
+                                <li><a class="dropdown-item" asp-area="" asp-page="/ClienteDetails" asp-route-id="1">Cliente 1</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-page="/ClienteDetails" asp-route-id="2">Cliente 2</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div>
