--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -50,6 +50,9 @@
                                 <li><a class="dropdown-item" asp-area="" asp-page="/ClienteDetails" asp-route-id="2">Cliente 2</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ViewNotes">View Notes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
